# mushishi

./: .env.template  .gitignore  Dockerfile  README.md  TODO  __main__.py  docker-compose.yml  mushishi.py  pyproject.toml
docs/: TODO
lib/: unparse.py
plugins/: RoleRPG.py  admin.py  associate.py  calc.py  csgopc.py  discordmusic.py  dna_royale.py  factoid.py  gpt.py  guildmanager.py  journal.py  jukebox.py  net.py  raid.py  reaction.py  rolemaster.py  tf_topic.py  utils.py
plugins/resources/: fileserve.py  helpers.py  maze.py
src/mushishi/: __main__.py  mushishi.py
src/mushishi/lib/: unparse.py
src/mushishi/plugins/: admin.py  associate.py  calc.py  csgopc.py  dna_royale.py  factoid.py  interactor.py  journal.py  jukebox.py  raid.py  reaction.py  rolemaster.py  utils.py
